se hacen mas arreglos

--- a/Front-DamasuBank/src/app/Pages/PSE/pse/pse.component.html
+++ b/Front-DamasuBank/src/app/Pages/PSE/pse/pse.component.html
@@ -97,7 +97,7 @@
 </div>
 <div class="d-flex justify-content-center align-items-center custom-alert-valor">
     <div class="d-flex">
-        <p class="d-flex justify-content-center align-items-center" style="font-family: Montserrat; font-size: 14px; font-weight: 500;">Dinero disponible ${{ Balance  }}</p>
+        <p class="d-flex justify-content-center align-items-center" style="font-family: Montserrat; font-size: 14px; font-weight: 500;">Dinero disponible ${{ Balance + Pse  }}</p>
         
     </div>
 </div>
